# sem3_lab6_c_------

./: .gitignore  CMakeLists.txt  ExportImport.cpp  ExportImport.h  View.cpp  View.h  controller.cpp  controller.h  info.txt  main.cpp  modeldocument.cpp  modeldocument.h  primitive.cpp  primitive.h
.github/workflows/: release.yml
